# libcc

./: .clang-format  CMakeLists.txt  CMakePresets.json  README
include/cc/std/: assert.h  ctype.h  errno.h  float.h  limits.h
src/std/: assert.c  ctype.c  ctype_is.c  ctype_tolower.c  ctype_toupper.c  errno.c  float.c
tests/: CMakeLists.txt
tests/include/: test_utils.h
tests/std/: CMakeLists.txt  assert.c  test_ctype.c  test_ctype_tolower.c  test_ctype_toupper.c  test_errno.c  test_float.c
